[gd_scene load_steps=5 format=3 uid="uid://c8j43o1mx2osb"]

[ext_resource type="Script" uid="uid://6wi0r17y6aji" path="res://scripts/tilescreen.gd" id="1_daf6c"]
[ext_resource type="Texture2D" uid="uid://psnpkhc8vugw" path="res://sprites/Seasonal Tilesets/menu/tile_screen_bg.png" id="1_pi1fb"]
[ext_resource type="Texture2D" uid="uid://cuwl0w5oc7r4o" path="res://sprites/Seasonal Tilesets/menu/game_logo.png" id="2_148x4"]
[ext_resource type="Theme" uid="uid://bi8xupumnkx7" path="res://tiles/defaulbutton.tres" id="3_148x4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_daf6c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pi1fb")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(175, 100)
layout_mode = 2
texture = ExtResource("2_148x4")
expand_mode = 5
stretch_mode = 6

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_148x4")
text = "START
"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_148x4")
text = "TUTORIAL
"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_148x4")
text = "QUIT"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
